--- a/dzien1/index.html
+++ b/dzien1/index.html
@@ -8,19 +8,21 @@
 </head>
     <body>
         <table border="1">
-            <tbody>
+
+                <tr>
+                    <td colspan="1">1</td>
+                </tr>
+
                 <tr>
                     <td rowspan="3">1</td>
+                    <td rowspan="3">2</td>
+                    <td rowspan="3">3</td>
                 </tr>
+
                 <tr>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
+                    <td colspan="1">1</td>
                 </tr>
-                <tr>
-                    <td rowspan="3">1</td>
-                </tr>
-            </tbody>
+
         </table>
     </body>
 </html>
