--- a/dzien1/index.html
+++ b/dzien1/index.html
@@ -10,7 +10,7 @@
         <table border="1">
 
                 <tr>
-                    <td colspan="3" style="text-align: center;">1</td>
+                    <td colspan="3" style="text-align: center;">>;]</td>
                 </tr>
 
                 <tr>
@@ -20,7 +20,7 @@
                 </tr>
 
                 <tr>
-                    <td colspan="3" style="text-align: center;">1</td>
+                    <td colspan="3" style="text-align: center;">>;P</td>
                 </tr>
 
         </table>
