--- a/dzien1/index.html
+++ b/dzien1/index.html
@@ -10,6 +10,19 @@
         <table border="1">
 
                 <tr>
+                    <td colspan="3" style="text-align: center;">1</td>
+                </tr>
+
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                </tr>
+
+                <tr>
+                    <td colspan="3" style="text-align: center;">2</td>
+                </tr>
+                <tr>
                     <td colspan="3" style="text-align: center;">>;]</td>
                 </tr>
 
@@ -22,7 +35,6 @@
                 <tr>
                     <td colspan="3" style="text-align: center;">>;P</td>
                 </tr>
-
         </table>
     </body>
 </html>
