--- a/dzien1/index.html
+++ b/dzien1/index.html
@@ -26,7 +26,7 @@
                     <td colspan="3" style="text-align: center;">>;]</td>
                 </tr>
 
-                <tr>
+                <tr style="float: left;">
                     <td>1</td>
                     <td>2</td>
                     <td>3</td>
