--- a/dzien1/index.html
+++ b/dzien1/index.html
@@ -22,19 +22,22 @@
                 <tr>
                     <td colspan="3" style="text-align: center;">2</td>
                 </tr>
-                <tr>
-                    <td colspan="3" style="text-align: center;">>;]</td>
-                </tr>
+        </table>
+    </br></br></br>
+        <table>
+            <tr>
+                <td colspan="3" style="text-align: center;">>;]</td>
+            </tr>
 
-                <tr style="float: left;">
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                </tr>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+            </tr>
 
-                <tr>
-                    <td colspan="3" style="text-align: center;">>;P</td>
-                </tr>
+            <tr>
+                <td colspan="3" style="text-align: center;">>;P</td>
+            </tr>
         </table>
     </body>
 </html>
