--- a/dzien1/index.html
+++ b/dzien1/index.html
@@ -24,7 +24,7 @@
                 </tr>
         </table>
     </br></br></br>
-        <table>
+        <table border="1">
             <tr>
                 <td colspan="3" style="text-align: center;">>;]</td>
             </tr>
