--- a/dzien1/index.html
+++ b/dzien1/index.html
@@ -7,7 +7,7 @@
     <title>Tabele</title>
 </head>
     <body>
-        <table border="1">
+        <table border="1" style="float: left;">
 
                 <tr>
                     <td colspan="3" style="text-align: center;">1</td>
