--- a/dzien1/index.html
+++ b/dzien1/index.html
@@ -7,7 +7,8 @@
     <title>Tabele</title>
 </head>
     <body>
-        <table border="1" style="float: left;">
+        <section>
+        <table border="1" style="float: left; border: dotted;">
 
                 <tr>
                     <td colspan="3" style="text-align: center;">1</td>
@@ -39,5 +40,6 @@
                 <td colspan="3" style="text-align: center;">>;P</td>
             </tr>
         </table>
+        </section>
     </body>
 </html>
