--- a/dzien2/cwiczenie1.html
+++ b/dzien2/cwiczenie1.html
@@ -21,7 +21,7 @@
          <div class="displayGif">Gif</div>
          <div class="descGif">Opis Gifa</div>
     </div>
- <div class="footer"></div>
+ <div class="footer">Created by Karol Jarczewski</div>
  
 </body>
 </html>
