--- a/dzien2/cwiczenie1.html
+++ b/dzien2/cwiczenie1.html
@@ -17,7 +17,7 @@
     <div class="gif">Gif</div>
  </div>
 
- <div clas="content">
+ <div classs="content">
     <div class="displayGif">Gif</div>
     <div class="descGif">Opis Gifa</div>
  </div>
