--- a/dzien2/cwiczenie2.html
+++ b/dzien2/cwiczenie2.html
@@ -77,7 +77,7 @@
 <body>
     <div class="header">
         <div class="nav">
-            <div class="logo"></div>
+            <div class="logo" alt="logo">logo.jpg</div>
             <div class="menu">
                 <div>Absolutne</div>
                 <div>Relatywne</div>
