--- a/dzien2/cwiczenie2.html
+++ b/dzien2/cwiczenie2.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        :root
+        {
+            font-size: 18px;
+        }
         body
         {
             background-color: antiquewhite;
@@ -55,6 +59,15 @@
         .s4{height: 1px;}
         .s5{height: 1pt;}
 
+        .wykres2
+        {
+            border: 2px dashed blue;
+            height: 8in;
+            margin-top: 15%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+        }
         /* .sprites
         {
             border: 2px dashed red;
@@ -87,6 +100,16 @@
     </div>
     <div class="absolutne">
         <div class="wykres1">
+            <div class="slupek s1"></div>
+            <div class="slupek s2"></div>
+            <div class="slupek s3"></div>
+            <div class="slupek s4"></div>
+            <div class="slupek s5"></div>
+        </div>
+    </div>
+
+    <div class="absolutne">
+        <div class="wykres2">
             <div class="slupek s1"></div>
             <div class="slupek s2"></div>
             <div class="slupek s3"></div>
