--- a/dzien2/cwiczenie2.html
+++ b/dzien2/cwiczenie2.html
@@ -15,7 +15,7 @@
             background-color: antiquewhite;
         }
 
-        div
+        .header, .nav, .logo, .menu
         {
             border: 2px dashed red;
         }
@@ -78,7 +78,7 @@
 
         .wykres2
         {
-            border: 5px dashed blue;
+            border: 2px dashed blue;
             display: flex;
             flex-direction: column;
         }
