--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -105,7 +105,7 @@
         Ta strone nie używa ciasteczek
     </div>
     <div class="sticky">Zwierzęta</div>
-    <div class="fixed">Zainteresowany budowanem stron internetowych ?
+    <div class="fixed">Zainteresowany tematyką zwierząt ?
         <a href="https://github.com/apietryga/kurs-Front-end/blob/master/materialy/lekcja2/cw2/lew.jpg?raw=true">Kliknij tutaj</a>
     </div>
     <div class="content">
