--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -32,6 +32,12 @@
             z-index:1;
         }
 
+        .sticky:hover
+        {
+            background-color: #38b51f;
+            transition: 1s;
+        }
+
         .fixed
         {
             border: 5px solid rgb(165, 21, 231);
