--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -34,8 +34,14 @@
 
         .sticky:hover
         {
-            background-color: #38b51f;
-            transition: 1s;
+            background-color: #5adb40;
+            transition: 1.5s;
+        }
+
+        .sticky:active
+        {
+            height: 150px;
+            transition: 2s;
         }
 
         .fixed
@@ -48,6 +54,12 @@
             bottom: 0;
             width: 100%;
             z-index:1;
+        }
+
+        .fixed:hover
+        {
+            background-color: #40dbd1;
+            transition: 1.5s;
         }
 
         .content
