--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -74,7 +74,7 @@
 
         .relative
         {
-            border: 10px dashed red;
+            /* border: 10px dashed red; */
             width: 45vw;
             height: 40vw;
             position: relative;
