--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -41,7 +41,7 @@
         .sticky:active
         {
             height: 150px;
-            transition: 2s;
+            transition: all 2s;
         }
 
         .fixed
