--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -13,7 +13,7 @@
         }
         body
         {
-            background-color: rgb(236, 176, 176);
+            background-color: rgb(218, 216, 216);
         }
 
         .static
@@ -40,8 +40,9 @@
 
         .sticky:active
         {
-            height: 150px;
-            transition: all 2s;
+            /* height: 150px; */
+            transition: 2s;
+            transition: scale(1.5);
         }
 
         .fixed
