--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -89,7 +89,8 @@
             width: 100%;
             height: 100%;
             left: 0;
-            background-color: #fff;
+            text-align: center;
+            background-color: rgb(218, 216, 216);
             background-size: cover;
         }
 
