--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -152,7 +152,7 @@
             Zdjęcie Nosorożca
         </div>
         <div class="absolute a2 clickable">
-            Kliknija aby zobaczyć Nosorożnca
+            Kliknija aby zobaczyć Nosorożca
         </div>
     </div>
 
