--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -134,7 +134,7 @@
             Zdjęcie Słonia
         </div>
         <div class="absolute a2 clickable">
-            Kliknija aby zobaczyć Słonia
+            Kliknij aby zobaczyć Słonia
         </div>
     </div>
 
@@ -143,7 +143,7 @@
             Zdjęcie Zebry
         </div>
         <div class="absolute a2 clickable">
-            Kliknija aby zobaczyć Zebre
+            Kliknij aby zobaczyć Zebre
         </div>
     </div>
 
@@ -152,7 +152,7 @@
             Zdjęcie Nosorożca
         </div>
         <div class="absolute a2 clickable">
-            Kliknija aby zobaczyć Nosorożca
+            Kliknij aby zobaczyć Nosorożca
         </div>
     </div>
 
@@ -161,7 +161,7 @@
             Zdjęcie Lwa
         </div>
         <div class="absolute a2 clickable">
-            Kliknija aby zobaczyć Lwa
+            Kliknij aby zobaczyć Lwa
         </div>
     </div>
     </div>
