--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -68,7 +68,7 @@
             display:  flex;
             justify-content: space-evenly;
             flex-wrap: wrap;
-            border: 5px dashed blue;
+            /* border: 5px dashed blue; */
             padding: 7% 0;
             margin-bottom: 10%;
         }
@@ -84,7 +84,7 @@
 
         .absolute
         {
-            border: 10px solid #000;
+            border: 5px dotted #000;
             position: absolute;
             width: 100%;
             height: 100%;
