animacje powrotu dla sticky i footer

--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -30,6 +30,7 @@
             position: sticky;
             top: 80px;
             z-index:1;
+            transition: 1.5s;
         }
 
         .sticky:hover
@@ -64,6 +65,7 @@
             bottom: 0;
             width: 100%;
             z-index:1;
+            transition: 1.5s;
         }
 
         .fixed:hover
