--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -28,7 +28,7 @@
             background-color: rgb(195, 94, 241);
             padding: 2% 5%;
             position: sticky;
-            top: 80px;
+            top: 50px;
             z-index:1;
             transition: 1.5s;
         }
@@ -118,9 +118,6 @@
 
 
 
-        /* .a1{z-index:1;}
-        .a2{z-index:2;} */
-
         @media (max-device-width: 748px)
         {
             .relative
@@ -141,37 +138,37 @@
     </div>
     <div class="content">
     <div class="relative">
-        <div class="absolute a1 img1">
+        <div class="absolute img1">
             Zdjęcie Słonia
         </div>
-        <div class="absolute a2 clickable">
+        <div class="absolute clickable">
             Kliknij aby zobaczyć Słonia
         </div>
     </div>
 
     <div class="relative">
-        <div class="absolute a1 img2">
+        <div class="absolute img2">
             Zdjęcie Zebry
         </div>
-        <div class="absolute a2 clickable">
+        <div class="absolute clickable">
             Kliknij aby zobaczyć Zebre
         </div>
     </div>
 
     <div class="relative">
-        <div class="absolute a1 img3">
+        <div class="absolute img3">
             Zdjęcie Nosorożca
         </div>
-        <div class="absolute a2 clickable">
+        <div class="absolute clickable">
             Kliknij aby zobaczyć Nosorożca
         </div>
     </div>
 
     <div class="relative">
-        <div class="absolute a1 img4">
+        <div class="absolute img4">
             Zdjęcie Lwa
         </div>
-        <div class="absolute a2 clickable">
+        <div class="absolute clickable">
             Kliknij aby zobaczyć Lwa
         </div>
     </div>
