--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -125,6 +125,11 @@
                 width:80vw;
                 height:80vw;
             }
+
+            .absolute
+        {
+            margin-top: 15%;
+        }
         }
     </style>
 </head>
