--- a/dzien4/cwiczenie1.html
+++ b/dzien4/cwiczenie1.html
@@ -26,7 +26,8 @@
         {
             border: 5px solid rgb(165, 21, 231);
             background-color: rgb(195, 94, 241);
-            padding: 2% 5%;
+            font-size: 24px;
+            padding: 0 5%;
             position: sticky;
             top: 50px;
             z-index:1;
@@ -40,12 +41,13 @@
             transition: 1.5s;
         }
 
-        p > .sticky:hover
+        .sticky > p:hover
         {
             /* NIE DZIAŁA */
-            margin-left: 350px;
-            transition-duration: 1.5s;
-            transform: scaleX(1.5);
+            margin-left: ;
+            text-align: center;
+            transition-duration: 3.5s;
+            /* transform: scaleX(1.5); */
         }
 
         .sticky:active
@@ -105,6 +107,11 @@
             background-size: cover;
         }
 
+        .absolute > p
+        {
+            
+        }
+
         .clickable:active
         {
             opacity:0;
@@ -120,6 +127,11 @@
 
         @media (max-device-width: 748px)
         {
+
+            .sticky > p
+            {
+                text-align: center;
+            }
             .relative
             {
                 width:80vw;
@@ -147,7 +159,7 @@
             Zdjęcie Słonia
         </div>
         <div class="absolute clickable">
-            Kliknij aby zobaczyć Słonia
+            <p>Kliknij aby zobaczyć Słonia</p>
         </div>
     </div>
 
@@ -156,7 +168,7 @@
             Zdjęcie Zebry
         </div>
         <div class="absolute clickable">
-            Kliknij aby zobaczyć Zebre
+            <p>Kliknij aby zobaczyć Zebre</p>
         </div>
     </div>
 
@@ -165,7 +177,7 @@
             Zdjęcie Nosorożca
         </div>
         <div class="absolute clickable">
-            Kliknij aby zobaczyć Nosorożca
+            <p>Kliknij aby zobaczyć Nosorożca</p>
         </div>
     </div>
 
@@ -174,7 +186,7 @@
             Zdjęcie Lwa
         </div>
         <div class="absolute clickable">
-            Kliknij aby zobaczyć Lwa
+            <p>Kliknij aby zobaczyć Lwa</p>
         </div>
     </div>
     </div>
