--- a/dzien4/cwiczenie2.html
+++ b/dzien4/cwiczenie2.html
@@ -76,19 +76,19 @@
         </a>
         <a href="#">
             <i class="icon-info"></i>
-            <p>O mnie</p>
+            <p>Info</p>
         </a>
         <a href="#">
             <i class="icon-docs"></i>
-            <p>O mnie</p>
+            <p>Dokumenty</p>
         </a>
         <a href="#">
             <i class="icon-github-circled"></i>
-            <p>O mnie</p>
+            <p>Github</p>
         </a>
         <a href="#">
             <i class="icon-mail"></i>
-            <p>O mnie</p>
+            <p>E-mail</p>
         </a>
     </div>
     <div class="footer">Copyright by Karol Jarczewski</div>
