--- a/dzien4/cwiczenie2.html
+++ b/dzien4/cwiczenie2.html
@@ -42,11 +42,11 @@
                 transition: 1s;
             }
 
-        a:nth-child(1){grid-area:abaut;}
-        a:nth-child(2){grid-area:info;}
-        a:nth-child(3){grid-area:projects;}
-        a:nth-child(4){grid-area:github;}
-        a:nth-child(5){grid-area:mail;}
+        a:nth-child(1){grid-area:abaut; background-color: #5adb40}
+        a:nth-child(2){grid-area:info; background-color: #40dbb4}
+        a:nth-child(3){grid-area:projects; background-color: #f08b1f}
+        a:nth-child(4){grid-area:github; background-color: #e21ff0}
+        a:nth-child(5){grid-area:mail; background-color: #bff01f}
 
         .footer
         {
