--- a/dzien4/cwiczenie2.html
+++ b/dzien4/cwiczenie2.html
@@ -46,7 +46,7 @@
         a:nth-child(2){grid-area:info; background-color: #40dbb4}
         a:nth-child(3){grid-area:projects; background-color: #f08b1f}
         a:nth-child(4){grid-area:github; background-color: #e21ff0}
-        a:nth-child(5){grid-area:mail; background-color: #bff01f}
+        a:nth-child(5){grid-area:mail; background-color: #fcdc0d}
 
         .footer
         {
