--- a/dzien4/cwiczenie2.html
+++ b/dzien4/cwiczenie2.html
@@ -52,6 +52,13 @@
         {
             border:2px solid #000;
             text-align: right;
+            background: #fefcea;
+            background: -moz-linear-gradient(left,  #fefcea 0%, #f1da36 100%);
+            background: -webkit-linear-gradient(left,  #fefcea 0%,#f1da36 100%);
+            background: linear-gradient(to right,  #fefcea 0%,#f1da36 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fefcea', endColorstr='#f1da36',GradientType=1 );
+            padding: 5px 10px;
+
         }
 
         @media (max-device-width: 740px)
