--- a/dzien4/cwiczenie2.html
+++ b/dzien4/cwiczenie2.html
@@ -16,6 +16,8 @@
             "abaut info projects"
             "github mail projects";
             gap:5px;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
         }
 
         h3,p
@@ -32,7 +34,8 @@
             justify-content:center;
             flex-direction: column;
             align-items: center;
-            padding:20% 0;
+            padding:10% 0;
+            min-height: 15vh;
             font-size:1.5em;
         }
 
