--- a/dzien4/cwiczenie2.html
+++ b/dzien4/cwiczenie2.html
@@ -17,7 +17,7 @@
             "github mail projects";
             gap:5px;
             grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
         }
 
         h3,p
