--- a/dzien4/cwiczenie2.html
+++ b/dzien4/cwiczenie2.html
@@ -66,9 +66,9 @@
 
         @media (max-device-width: 740px)
         {
-            a:nth-child()
+            .grid
             {
-                
+                display: block;
             }
 
         }
