bug img src naprawiony

--- a/dzien5/cwiczenie1.html
+++ b/dzien5/cwiczenie1.html
@@ -142,7 +142,7 @@
     <div class="content">
         <main>
             <header>
-                <img scr="article.jpg" alt="nie che wyświetlić MŁOTKA">
+                <img src="article.jpg" alt="nie che wyświetlić MŁOTKA">
                 <h1>Tytuł</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, earum.
