--- a/dzien5/cwiczenie1.html
+++ b/dzien5/cwiczenie1.html
@@ -17,13 +17,13 @@
         img
         {
             max-width: 100%;
-            z-index: 9999;
         }
 
         .topHeader
         {
             text-align: center;
         }
+        
         .topNav
         {
             border: 2px dashed#fff;
@@ -33,7 +33,7 @@
         {
             padding: 0;
             margin: 0;
-            color: white;
+            color:#fff;
             display: flex;
             justify-content: space-between;
         }
@@ -46,7 +46,9 @@
         ul
         {
             display:none;
-            border: 2px dashed red;
+            border: 2px dashed grey;
+            color: #fff;
+            text-align: center;
             position: absolute;
             width: 100%;
             flex-direction: column;
@@ -56,7 +58,9 @@
 
         ul > li
         {
-            border: 2px dashed red;
+            background-color: grey;
+            border: 2px dashed #fff;
+            padding: 15px;
         }
 
         ol > li
@@ -74,14 +78,17 @@
         .content
         {
             display: flex;
-        }
-
-        .recommend
-        {
-            border: 2px solid #fff;
+            border: 2px dashed red;
+            align-items: flex-start;
         }
 
         main
+        {
+            border: 2px solid #fff;
+            flex: 3;
+        }
+
+        .recommend
         {
             border: 2px solid #fff;
             flex: 1;
