arykuly polecane stylizacja

--- a/dzien5/cwiczenie1.html
+++ b/dzien5/cwiczenie1.html
@@ -21,6 +21,7 @@
 
         .topHeader
         {
+            background-image: url(logo.png);
             text-align: center;
         }
         
@@ -176,27 +177,29 @@
             </p>
         </main>
         <aside class="recommend">
-            <h3>Polecane artykuły</h3>
+            <h1>Polecane artykuły</h1><br><br>
+
+            <h3>Artykuł</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur qui enim molestias sapiente ipsa vel fuga obcaecati ex beatae. Consequuntur libero sint obcaecati aliquam minus blanditiis fuga suscipit unde amet.
             </p>
 
-            <h3>Polecane artykuły</h3>
+            <h3>Artykuł</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur qui enim molestias sapiente ipsa vel fuga obcaecati ex beatae. Consequuntur libero sint obcaecati aliquam minus blanditiis fuga suscipit unde amet.
             </p>
 
-            <h3>Polecane artykuły</h3>
+            <h3>Artykuł</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur qui enim molestias sapiente ipsa vel fuga obcaecati ex beatae. Consequuntur libero sint obcaecati aliquam minus blanditiis fuga suscipit unde amet.
             </p>
 
-            <h3>Polecane artykuły</h3>
+            <h3>Artykuł</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur qui enim molestias sapiente ipsa vel fuga obcaecati ex beatae. Consequuntur libero sint obcaecati aliquam minus blanditiis fuga suscipit unde amet.
             </p>
-            
-            <h3>Polecane artykuły</h3>
+
+            <h3>Artykuł</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur qui enim molestias sapiente ipsa vel fuga obcaecati ex beatae. Consequuntur libero sint obcaecati aliquam minus blanditiis fuga suscipit unde amet.
             </p>
