--- a/dzien5/cwiczenie1.html
+++ b/dzien5/cwiczenie1.html
@@ -21,7 +21,6 @@
 
         .topHeader
         {
-            background-image: url(logo.png);
             text-align: center;
         }
         
@@ -111,6 +110,7 @@
 <body>
 
     <nav class="topNav">
+        <img src="logo.png" alt="nie che wyświetlić loga">
         <ol>
             <li>
                 PrawoCywilne
