poprawka tytulu strony

--- a/dzien5/cwiczenie1.html
+++ b/dzien5/cwiczenie1.html
@@ -162,7 +162,7 @@
     <div class="content">
         <main>
             <header>            
-                <h1>Tytuł</h1>
+                <h1>Kancelaria Prawna</h1>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, earum.
                 </p>
