--- a/dzien6/index.html
+++ b/dzien6/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <title>Document</title>
 </head>
 <body>
   <header>
@@ -24,5 +24,6 @@
   <footer>
     Ten js jest niesamowity
   </footer>
+  <script src="script.jes"></script>
 </body>
 </html>
