--- a/dzien6/index.html
+++ b/dzien6/index.html
@@ -24,6 +24,6 @@
   <footer>
     Ten js jest niesamowity
   </footer>
-  <script src="script.jes"></script>
+  <script src="script.js"></script>
 </body>
 </html>
