--- a/dzien6/index.html
+++ b/dzien6/index.html
@@ -17,7 +17,7 @@
     </header>
     <section>
       <div class="left">&larr;</div>
-      <div class="content">content</div>
+      <div class="content"></div>
       <div class="right">&rarr;</div>
     </section>
   </main>
