--- a/Moje-Cwiczenia/Platforma_do_Nauki/index.html
+++ b/Moje-Cwiczenia/Platforma_do_Nauki/index.html
@@ -33,7 +33,7 @@
     </style>
 </head>
 <body>
-    <div id="fake-input" contenteditable="true" data-text="wpisz: przykładowy tekst">Karol Jarczewski</div>
+    <div id="fake-input" contenteditable="true" data-text="wpisz: przykładowy tekst"></div>
 <!--     <pre id="key-code"></pre> -->
 <!-- <div class="textarea">abcdefghijklmnoprstuwxyz</div> -->
 
