--- a/Moje-Cwiczenia/Platforma_do_Nauki/index.html
+++ b/Moje-Cwiczenia/Platforma_do_Nauki/index.html
@@ -27,16 +27,14 @@
     overflow: auto;
   }
 
-  .textarea
-  {
-    font-size: 2
-  }
+
     </style>
 </head>
 <body>
+    <div class="textarea">Wpisz treć w pole tekstowe</div>
     <div id="fake-input" contenteditable="true" data-text="wpisz: przykładowy tekst"></div>
     <pre id="key-code"></pre>
-<!-- <div class="textarea">abcdefghijklmnoprstuwxyz</div> -->
+
 
 <script>
     const fake_input = document.getElementById("fake-input");
