font-size: 26px

--- a/Moje-Cwiczenia/Platforma_do_Nauki/index.html
+++ b/Moje-Cwiczenia/Platforma_do_Nauki/index.html
@@ -13,6 +13,7 @@
     height: 600px;
     overflow: hidden;
     background-color: grey;
+    font-size: 26px;
     color: #000;
     border: 2px solid black;
   }
