--- a/Moje-Cwiczenia/Platforma_do_Nauki/index.html
+++ b/Moje-Cwiczenia/Platforma_do_Nauki/index.html
@@ -50,19 +50,19 @@ fake_input.addEventListener("keydown", (event) => {
 
   switch(event.keyCode) {
     case 65: // litera A
-      fore_color = "darkorange";
+      fore_color = "Aqua";
       break;
     case 66: // litera B
-      fore_color = "olivedrab";
+      fore_color = "SaddleBrown";
       break;
     case 67: // litera C
-      fore_color = "champagne";
+      fore_color = "red";
       break;
       case 68: // litera D
       fore_color = "amber";
       break;
     case 69: // litera E
-      fore_color = "mediumseagreen";
+      fore_color = "DeepPink";
       break;
     case 70: // litera F
       fore_color = "darkslateblue";
@@ -74,13 +74,13 @@ fake_input.addEventListener("keydown", (event) => {
       fore_color = "darkturquoise";
       break;
     case 73: // litera I
-      fore_color = "darkcyan";
+      fore_color = "Indigo";
       break;
       case 74: // litera J
       fore_color = "lightblue";
       break;
     case 75: // litera K
-      fore_color = "limegreen";
+      fore_color = "pastelpink";
       break;
     case 76: // litera L
       fore_color = "lightcoral";
@@ -89,16 +89,19 @@ fake_input.addEventListener("keydown", (event) => {
       fore_color = "mahogany";
       break;
     case 78: // litera N
-      fore_color = "darkorange";
+      fore_color = "Blue";
       break;
     case 79: // litera O
-      fore_color = "orangered";
+      fore_color = "darkorange";
       break;
       case 80: // litera P
-      fore_color = "pastelpink";
+      fore_color = "SandyBrown";
+      break;
+      case 81: // litera Q
+      fore_color = "Goldenrod";
       break;
     case 82: // litera R
-      fore_color = "royalblue";
+      fore_color = "fuchsia";
       break;
     case 83: // litera S
       fore_color = "salmon";
@@ -113,10 +116,10 @@ fake_input.addEventListener("keydown", (event) => {
       fore_color = "darkviolet";
       break;
     case 87: // litera W
-      fore_color = "red";
+      fore_color = "champagne";
       break;
     case 88: // litera X
-      fore_color = "rosybrown";
+      fore_color = "white";
       break;
       case 89: // litera Y
       fore_color = "brown";
