--- a/Moje-Cwiczenia/Platforma_do_Nauki/index.html
+++ b/Moje-Cwiczenia/Platforma_do_Nauki/index.html
@@ -38,6 +38,7 @@
 
 
 <script>
+/* https://forum.pasja-informatyki.pl/504168/zmiana-koloru-pojedynczych-liter-w-inpucie */
     const fake_input = document.getElementById("fake-input");
 const key_code = document.getElementById("key-code");
 
@@ -50,6 +51,9 @@ fake_input.addEventListener("keydown", (event) => {
 
   switch(event.keyCode) {
     case 65: // litera A
+      fore_color = "Aqua";
+      break;
+      case &#260: // litera Ą
       fore_color = "Aqua";
       break;
     case 66: // litera B
