--- a/index.html
+++ b/index.html
@@ -8,6 +8,54 @@
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <div class="box-model">
+        <div class="row1">
+            <div class="head">
+                <dix class="box"></dix>
+            </div>
+        </div>
+        <div class="row2">
+            <div class="neck">
+                <div class="box-neck">
+            </div>
+        </div>
+
+        <div class="row3">
+            <div class="torso">
+                <div class="armL"></div>
+                <div class="tors"></div>
+                <div class="armR"></div>
+            </div>            
+        </div>
+
+        <div class="row4">
+            <div class="hands">
+                <div class="handL"></div>
+                <div class="handR"></div>
+            </div>
+        </div>
+
+        <div class="row5">
+            <div class="thighs">
+                <div class="thighsL"></div>
+                <div class="thighsR>"></div>
+            </div>
+        </div>
+
+        <div class="row6">
+            <div class="legs">
+                <div class="legL"></div>
+                <div class="legR"></div>
+            </div>
+        </div>
+
+        <div class="row7">
+            <div class="feet">
+                <div class="footL"></div>
+                <div class="footR"></div>
+            </div>
+        </div>
+
+    </div>
 </body>
 </html>
