--- a/index.html
+++ b/index.html
@@ -22,30 +22,47 @@
 
         <div class="row3">
             <div class="torso">
-                <div class="armL"></div>
+                <div class="armL">
+                    <div class="handL"></div>
+                </div>
                 <div class="tors"></div>
-                <div class="armR"></div>
+                <div class="armR">
+                    <div class="handR"></div>
+                </div>
             </div>            
         </div>
 
         <div class="row4">
             <div class="hands">
-                <div class="handL"></div>
-                <div class="handR"></div>
+                <!-- <div class="handL"></div>
+                <div class="handR"></div> -->
             </div>
         </div>
 
         <div class="row5">
             <div class="thighs">
-                <div class="thighsL"></div>
-                <div class="thighsR>"></div>
+                <div class="thighL">
+                    <div class="thighL1"></div>
+                    <div class="thighL1"></div>
+                </div>
+                <div class="thighR">
+                    <div class="thighR1"></div>
+                    <div class="thighR1"></div>
+                </div>
             </div>
         </div>
 
         <div class="row6">
             <div class="legs">
-                <div class="legL"></div>
-                <div class="legR"></div>
+                <div class="legL">
+                    <div class="leg"></div>
+                    <div class="leg"></div>
+
+                </div>
+                <div class="legR">
+                    <div class="leg"></div>
+                    <div class="leg"></div>
+                </div>
             </div>
         </div>
 
