--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <meta property="og:title" content="Portfolio - Karol Jarczewski">
+    <meta property="og:description" content="Frontendowe Portfolio">
+    <meta property="og:image" content="https://github.com/apietryga/apietryga.github.io/blob/master/lekcja6/article.jpg?raw=true">
     <title>Portfolio</title>
 </head>
 <body>
