--- a/index.html
+++ b/index.html
@@ -28,7 +28,24 @@
                 <div class="armL">
                     <div class="handL"></div>
                 </div>
-                <div class="tors"></div>
+                <div class="tors">
+
+                    <div class="v-center">
+                        <article class="art1">
+                         <div class="front">
+                           <div class="text">
+                             <h2>Treść</h2>
+                           </div>
+                         </div>
+                         <div class="back">
+                           <div class="text">
+                             <p>Treść2</p>
+                           </div>
+                         </div>
+                       </article>
+                     </div>
+
+                </div>
                 <div class="armR">
                     <div class="handR"></div>
                 </div>
