--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
     <title>Portfolio</title>
 </head>
 <body>
+    <div class="container">
+        <header class="header">
+            <nav class="topnav">
+             <ul class="menu">
+                <li><a href="#start">Start</a></li>
+                <li><a href="#o mnie">o mnie</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#oferta">Oferta</a></li>
+                <li><a href="#dlaczegoja">Dlaczego ja xD</a></li>
+                <li><a href="#kontakt">kontakt</a></li>
+              </ul>
+            </nav>
+        </header>
+
     <div class="box-model">
         <div class="row1">
             <div class="head">
@@ -92,7 +106,7 @@
                 <div class="footR"></div>
             </div>
         </div>
-
+        </div>
     </div>
 </body>
 </html>
