--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <meta property="og:title" content="Portfolio - Karol Jarczewski">
     <meta property="og:description" content="Frontendowe Portfolio">
-    <meta property="og:image" content="https://github.com/apietryga/apietryga.github.io/blob/master/lekcja6/article.jpg?raw=true">
+    <meta property="og:image" content="23-2148273840.jpg?raw=true">
     <title>Portfolio</title>
 </head>
 <body>
     <div class="container">
         <header class="header">
+            <h3>Logo</h3>
             <nav class="topnav">
              <ul class="menu">
                 <li><a href="#start">Start</a></li>
