--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="row3">
             <div class="torso">
                 <div class="armL">
+                    <a href="#start">Start</a>
                     <div class="handL"></div>
                 </div>
                 <div class="tors">
@@ -62,6 +63,7 @@
 
                 </div>
                 <div class="armR">
+                    <a href="#o mnie">o mnie</a>
                     <div class="handR"></div>
                 </div>
             </div>            
@@ -77,12 +79,12 @@
         <div class="row5">
             <div class="thighs">
                 <div class="thighL">
-                    <div class="thighL1"></div>
-                    <div class="thighL1"></div>
+                    <div class="thighL1"><a href="#portfolio">Portfolio</a></div>
+                    <div class="thighL1"><a href="#oferta">Oferta</a></div>
                 </div>
                 <div class="thighR">
-                    <div class="thighR1"></div>
-                    <div class="thighR1"></div>
+                    <div class="thighR1"><a href="#dlaczegoja">Dlaczego ja xD</a></div>
+                    <div class="thighR1"><a href="#kontakt">kontakt</a></div>
                 </div>
             </div>
         </div>
