menu poprawka list style none

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                              <p>Treść2</p>
                            </div>
                          </div>
+                         <div class="third"></div>
                        </article>
                      </div>
 
