--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <nav class="topnav">
              <ul class="menu">
                 <li><a href="#start">Start</a></li>
-                <li><a href="#o mnie">o mnie</a></li>
+                <li><a href="#o mnie">O mnie</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#oferta">Oferta</a></li>
                 <li><a href="#dlaczegoja">Dlaczego ja xD</a></li>
-                <li><a href="#kontakt">kontakt</a></li>
+                <li><a href="#kontakt">Kontakt</a></li>
               </ul>
             </nav>
         </header>
@@ -112,5 +112,7 @@
         </div>
         </div>
     </div>
+
+    <footer class="footer"><h3>Created By Karol Jarczewski</h3></footer>
 </body>
 </html>
