--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
                         <article class="art1">
                          <div class="front">
                            <div class="text">
-                             <h2>Treść</h2>
+                             <h2>Dotknij :)</h2>
                            </div>
                          </div>
                          <div class="back">
                            <div class="text">
-                             <p>Treść2</p>
+                             <p>Kliknij</p>
                            </div>
                          </div>
                          <div class="third"></div>
